Fixed vertical align of td in theads to be same as th

--- a/design/layout/print.css
+++ b/design/layout/print.css
@@ -235,7 +235,7 @@ th, td {
 	padding: 0;
 }
 
-thead th {
+thead th, thead td {
 	vertical-align: middle;
 }
 
