--- a/design/layout/screen.css
+++ b/design/layout/screen.css
@@ -583,7 +583,7 @@ th, td {
 	padding: 0;
 }
 
-thead th {
+thead th, thead td {
 	vertical-align: middle;
 }
 
